--- a/turnos.html
+++ b/turnos.html
@@ -4,12 +4,50 @@
 <meta charset="UTF-8">
 <title>Mis Turnos</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 20px; }
-  table { border-collapse: collapse; }
+  body { font-family: Arial, sans-serif; margin: 20px; background: #f5f6fa; }
+  table { border-collapse: collapse; margin-bottom: 20px; }
   th, td { padding: 5px 10px; text-align: center; }
-  td { border: 1px solid #ccc; width: 40px; height: 40px; }
-  td:hover { background-color: #f0f0f0; }
-  #ticketsContainer div { background-color: #fafafa; }
+  td { border: 1px solid #ccc; width: 40px; height: 40px; border-radius: 6px; }
+  td:hover { background-color: #eaeaea; }
+  h1 { color: #2c3e50; }
+  h2 { margin-top: 10px; }
+  
+  /* Estilo ticket */
+  .ticket {
+    background: white;
+    border: 2px dashed #3498db;
+    padding: 15px;
+    margin: 15px 0;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    position: relative;
+  }
+  .ticket:before, .ticket:after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: #f5f6fa;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .ticket:before { left: -12px; }
+  .ticket:after { right: -12px; }
+  .ticket strong { font-size: 1.1em; color: #2980b9; }
+  .ticket p { margin: 5px 0; }
+  .ticket button {
+    margin-top: 10px;
+    background: #e74c3c;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  .ticket button:hover {
+    background: #c0392b;
+  }
 </style>
 </head>
 <body>
@@ -110,16 +148,14 @@ function renderTickets(fechaStr){
 
   turnos.forEach(t=>{
     const div = document.createElement("div");
-    div.style.border = "1px solid #ccc";
-    div.style.padding = "10px";
-    div.style.margin = "10px 0";
-    div.style.borderRadius = "8px";
+    div.className = "ticket";
     div.innerHTML=`
-      <strong>${t.profesional}</strong> - ${t.nombre} ${t.apellido} <br>
-      <b>Hora:</b> ${t.hora} <br>
-      <b>DNI:</b> ${t.dni} <br>
-      <b>Tel:</b> ${t.telefono || '-'} <br>
-      <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">Eliminar turno</button>
+      <strong>${t.profesional}</strong><br>
+      <p><b>Paciente:</b> ${t.nombre} ${t.apellido}</p>
+      <p><b>Hora:</b> ${t.hora}</p>
+      <p><b>DNI:</b> ${t.dni}</p>
+      <p><b>Tel:</b> ${t.telefono || '-'}</p>
+      <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">🗑 Eliminar turno</button>
     `;
     ticketsDiv.appendChild(div);
   });
