--- a/turnos.html
+++ b/turnos.html
@@ -2,59 +2,19 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Mis Turnos</title>
+<title>Listado de Reservas</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 20px; background: #f5f6fa; }
-  table { border-collapse: collapse; margin-bottom: 20px; }
-  th, td { padding: 5px 10px; text-align: center; }
-  td { border: 1px solid #ccc; width: 40px; height: 40px; border-radius: 6px; }
-  td:hover { background-color: #eaeaea; }
-  h1 { color: #2c3e50; }
-  h2 { margin-top: 10px; }
-  
-  /* Estilo ticket */
-  .ticket {
-    background: white;
-    border: 2px dashed #3498db;
-    padding: 15px;
-    margin: 15px 0;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    position: relative;
-  }
-  .ticket:before, .ticket:after {
-    content: "";
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    background: #f5f6fa;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .ticket:before { left: -12px; }
-  .ticket:after { right: -12px; }
-  .ticket strong { font-size: 1.1em; color: #2980b9; }
-  .ticket p { margin: 5px 0; }
-  .ticket button {
-    margin-top: 10px;
-    background: #e74c3c;
-    color: white;
-    border: none;
-    padding: 8px 12px;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  .ticket button:hover {
-    background: #c0392b;
-  }
+  table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+  th { background: #3498db; color: white; }
+  tr:nth-child(even) { background: #ecf0f1; }
 </style>
 </head>
 <body>
 
-<h1>Mis Turnos</h1>
-<div id="calendarioContainer"></div>
-<div id="ticketsContainer"></div>
+<h1>Listado de Reservas</h1>
+<div id="tablaReservas"></div>
 
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbzzCb8frraC1MJ9ks8oD4Rr-hoGs1_GWdbpR7RGL6bSvQDX9ukvdzP8Zn0_p_DeOK4V/exec";
@@ -66,119 +26,56 @@ if(!username){
   window.location.href="login.html"; 
 }
 
-let turnosUsuario = [];
-let turnosPorFecha = {};
-let selectedDate = new Date();
-
-async function cargarTurnosUsuario(){
-  try{
+async function cargarReservas(){
+  try {
     const res = await fetch(`${API_URL}?action=getTurnosUsuario&username=${username}`);
     const data = await res.json();
     console.log("Respuesta API:", data);
 
-    turnosUsuario = [];
-    turnosPorFecha = {};
+    let turnos = [];
     if(data.turnos && typeof data.turnos === "object"){
       Object.keys(data.turnos).forEach(profId => {
         if(Array.isArray(data.turnos[profId])){
-          turnosUsuario.push(...data.turnos[profId]);
+          turnos.push(...data.turnos[profId]);
         }
       });
     }
 
-    // Agrupar por fecha sin hora
-    turnosUsuario.forEach(t=>{
-      const fechaSolo = t.fecha.split("T")[0];
-      if(!turnosPorFecha[fechaSolo]) turnosPorFecha[fechaSolo] = [];
-      turnosPorFecha[fechaSolo].push(t);
-    });
-
-    renderCalendario(selectedDate.getFullYear(), selectedDate.getMonth());
-  }catch(e){ 
-    console.error(e); 
-    document.getElementById("ticketsContainer").innerHTML="<p>Error al cargar turnos.</p>"; 
+    renderTabla(turnos);
+  } catch (e) {
+    console.error(e);
+    document.getElementById("tablaReservas").innerHTML = "<p>Error al cargar reservas.</p>";
   }
 }
 
-function renderCalendario(year, month){
-  const today = new Date();
-  const firstDay = new Date(year, month, 1);
-  const lastDay = new Date(year, month+1, 0);
-  const container = document.getElementById("calendarioContainer");
-  container.innerHTML = `<h2>${firstDay.toLocaleString("es-ES",{month:"long",year:"numeric"})}</h2>`;
+function renderTabla(turnos){
+  const cont = document.getElementById("tablaReservas");
 
-  let html = "<table><tr>";
-  const diasSemana=["Dom","Lun","Mar","Mié","Jue","Vie","Sáb"];
-  diasSemana.forEach(d=>html+=`<th>${d}</th>`); 
-  html+="</tr><tr>";
-
-  for(let d=1; d<=lastDay.getDate(); d++){
-    const fecha = new Date(year, month, d);
-    const fechaStr = fecha.toISOString().split("T")[0];
-
-    const td = document.createElement("td");
-    td.textContent = d;
-
-    // Días pasados no clickeables
-    if(fecha < new Date(today.getFullYear(), today.getMonth(), today.getDate())){
-      td.style.color="#999";
-      td.style.cursor="default";
-    } else { 
-      td.style.cursor="pointer";
-      td.addEventListener("click", ()=> renderTickets(fechaStr));
-    }
-
-    html += td.outerHTML;
-
-    if(fecha.getDay()===6 && d!==lastDay.getDate()) html+="</tr><tr>";
-  }
-  html+="</tr></table>";
-  container.innerHTML += html;
-}
-
-function renderTickets(fechaStr){
-  const ticketsDiv = document.getElementById("ticketsContainer");
-  const turnos = turnosPorFecha[fechaStr] || [];
-  ticketsDiv.innerHTML=`<h2>Turnos del ${fechaStr}</h2>`;
-
-  if(turnos.length===0){
-    ticketsDiv.innerHTML += `<p>En esta fecha no hay turnos.</p>`;
+  if(turnos.length === 0){
+    cont.innerHTML = "<p>No hay reservas para mostrar.</p>";
     return;
   }
 
-  turnos.forEach(t=>{
-    const div = document.createElement("div");
-    div.className = "ticket";
-    div.innerHTML=`
-      <strong>${t.profesional}</strong><br>
-      <p><b>Paciente:</b> ${t.nombre} ${t.apellido}</p>
-      <p><b>Hora:</b> ${t.hora}</p>
-      <p><b>DNI:</b> ${t.dni}</p>
-      <p><b>Tel:</b> ${t.telefono || '-'}</p>
-      <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">🗑 Eliminar turno</button>
-    `;
-    ticketsDiv.appendChild(div);
+  let html = "<table><tr>";
+  // Encabezados dinámicos según las claves de los turnos
+  Object.keys(turnos[0]).forEach(key=>{
+    html += `<th>${key}</th>`;
   });
-}
+  html += "</tr>";
 
-async function eliminarTurno(fecha,hora,profId,dni){
-  if(!confirm("Desea eliminar este turno?")) return;
-  try{
-    const res=await fetch(API_URL,{
-      method:"POST",
-      body:new URLSearchParams({action:"deleteReserva",username,fecha,hora,profesionalId:profId,dni})
+  turnos.forEach(t=>{
+    html += "<tr>";
+    Object.values(t).forEach(val=>{
+      html += `<td>${val}</td>`;
     });
-    const result=await res.json();
-    if(result.status==="ok"){ 
-      alert("Turno eliminado");
-      await cargarTurnosUsuario();
-      renderTickets(fecha);
-    }
-    else alert("Error al eliminar turno: "+(result.msg||""));
-  }catch(e){ console.error(e); }
+    html += "</tr>";
+  });
+
+  html += "</table>";
+  cont.innerHTML = html;
 }
 
-document.addEventListener("DOMContentLoaded", cargarTurnosUsuario);
+document.addEventListener("DOMContentLoaded", cargarReservas);
 </script>
 
 </body>
