--- a/turnos.html
+++ b/turnos.html
@@ -1,82 +1,225 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Listado de Reservas</title>
-<style>
-  body { font-family: Arial, sans-serif; margin: 20px; background: #f5f6fa; }
-  table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-  th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-  th { background: #3498db; color: white; }
-  tr:nth-child(even) { background: #ecf0f1; }
-</style>
+  <meta charset="UTF-8">
+  <title>Mis Turnos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    h1, h2 {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    #calendarioContainer {
+      max-width: 600px;
+      margin: 20px auto;
+      text-align: center;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+    th {
+      background: #007bff;
+      color: #fff;
+      padding: 8px;
+    }
+    td {
+      width: 14%;
+      height: 60px;
+      text-align: center;
+      vertical-align: middle;
+      border: 1px solid #ddd;
+      cursor: pointer;
+    }
+    td:hover {
+      background: #e6f0ff;
+    }
+    td.pasado {
+      color: #999;
+      background: #f5f5f5;
+      cursor: default;
+    }
+    td.conTurno {
+      background: #d1ffd1;
+      font-weight: bold;
+    }
+    #ticketsContainer {
+      max-width: 600px;
+      margin: 30px auto;
+    }
+    .ticket {
+      border: 1px solid #ccc;
+      background: #fff;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .ticket strong {
+      display: inline-block;
+      width: 100px;
+    }
+    .ticket button {
+      margin-top: 10px;
+      background: #ff4d4d;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 5px;
+      color: #fff;
+      cursor: pointer;
+    }
+    .ticket button:hover {
+      background: #cc0000;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Listado de Reservas</h1>
-<div id="tablaReservas"></div>
+  <h1>Mis Turnos</h1>
+  <div id="calendarioContainer"></div>
+  <div id="ticketsContainer"></div>
 
-<script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzzCb8frraC1MJ9ks8oD4Rr-hoGs1_GWdbpR7RGL6bSvQDX9ukvdzP8Zn0_p_DeOK4V/exec";
+  <script>
+    const API_URL = "https://script.google.com/macros/s/AKfycbzzCb8frraC1MJ9ks8oD4Rr-hoGs1_GWdbpR7RGL6bSvQDX9ukvdzP8Zn0_p_DeOK4V/exec";
 
-let username = localStorage.getItem("username");
+    let username = localStorage.getItem("username");
 
-if(!username){ 
-  alert("No hay usuario logueado"); 
-  window.location.href="login.html"; 
-}
+    if(!username){ 
+      alert("No hay usuario logueado"); 
+      window.location.href="login.html"; 
+    }
 
-async function cargarReservas(){
-  try {
-    const res = await fetch(`${API_URL}?action=getTurnosUsuario&username=${username}`);
-    const data = await res.json();
-    console.log("Respuesta API:", data);
+    let turnosUsuario = [];
+    let turnosPorFecha = {};
+    let selectedDate = new Date();
 
-    let turnos = [];
-    if(data.turnos && typeof data.turnos === "object"){
-      Object.keys(data.turnos).forEach(profId => {
-        if(Array.isArray(data.turnos[profId])){
-          turnos.push(...data.turnos[profId]);
+    async function cargarTurnosUsuario(){
+      try{
+        const res = await fetch(`${API_URL}?action=getTurnosUsuario&username=${username}`);
+        const data = await res.json();
+        console.log("Respuesta API:", data);
+
+        turnosUsuario = [];
+        turnosPorFecha = {};
+
+        if(data.turnos && typeof data.turnos === "object"){
+          Object.keys(data.turnos).forEach(profId => {
+            if(Array.isArray(data.turnos[profId])){
+              turnosUsuario.push(...data.turnos[profId]);
+            }
+          });
         }
+
+        // Agrupar por fecha (YYYY-MM-DD)
+        turnosUsuario.forEach(t=>{
+          const fechaSolo = t.fecha.split("T")[0];
+          if(!turnosPorFecha[fechaSolo]) turnosPorFecha[fechaSolo] = [];
+          turnosPorFecha[fechaSolo].push(t);
+        });
+
+        renderCalendario(selectedDate.getFullYear(), selectedDate.getMonth());
+      }catch(e){ 
+        console.error(e); 
+        document.getElementById("ticketsContainer").innerHTML="<p>Error al cargar turnos.</p>"; 
+      }
+    }
+
+    function renderCalendario(year, month){
+      const today = new Date();
+      const firstDay = new Date(year, month, 1);
+      const lastDay = new Date(year, month+1, 0);
+      const container = document.getElementById("calendarioContainer");
+      container.innerHTML = `<h2>${firstDay.toLocaleString("es-ES",{month:"long",year:"numeric"})}</h2>`;
+
+      let html = "<table><tr>";
+      const diasSemana=["Dom","Lun","Mar","Mié","Jue","Vie","Sáb"];
+      diasSemana.forEach(d=>html+=`<th>${d}</th>`); 
+      html+="</tr><tr>";
+
+      // Espacios en blanco hasta el primer día
+      for(let i=0; i<firstDay.getDay(); i++){
+        html += "<td></td>";
+      }
+
+      for(let d=1; d<=lastDay.getDate(); d++){
+        const fecha = new Date(year, month, d);
+        const fechaStr = fecha.toISOString().split("T")[0];
+        const tieneTurnos = turnosPorFecha[fechaStr] ? true : false;
+
+        let clases = "";
+        if(fecha < new Date(today.getFullYear(), today.getMonth(), today.getDate())){
+          clases = "pasado";
+        } else if(tieneTurnos){
+          clases = "conTurno";
+        }
+
+        const td = document.createElement("td");
+        td.textContent = d;
+        td.className = clases;
+
+        if(!td.classList.contains("pasado")){
+          td.addEventListener("click", ()=> renderTickets(fechaStr));
+        }
+
+        html += td.outerHTML;
+
+        if(fecha.getDay()===6 && d!==lastDay.getDate()) html+="</tr><tr>";
+      }
+      html+="</tr></table>";
+      container.innerHTML += html;
+    }
+
+    function renderTickets(fechaStr){
+      const ticketsDiv = document.getElementById("ticketsContainer");
+      const turnos = turnosPorFecha[fechaStr] || [];
+      ticketsDiv.innerHTML=`<h2>Turnos del ${new Date(fechaStr).toLocaleDateString("es-AR")}</h2>`;
+
+      if(turnos.length===0){
+        ticketsDiv.innerHTML += `<p>En esta fecha no hay turnos.</p>`;
+        return;
+      }
+
+      turnos.forEach(t=>{
+        const div = document.createElement("div");
+        div.className = "ticket";
+
+        div.innerHTML=`
+          <strong>Profesional:</strong> ${t.profesional}<br>
+          <strong>Hora:</strong> ${t.hora}<br>
+          <strong>Paciente:</strong> ${t.nombre} ${t.apellido}<br>
+          <strong>Tel:</strong> ${t.telefono}<br>
+          <button onclick="eliminarTurno('${t.fecha}','${t.hora}','${t.profesionalId}','${t.dni}')">❌ Eliminar turno</button>
+        `;
+        ticketsDiv.appendChild(div);
       });
     }
 
-    renderTabla(turnos);
-  } catch (e) {
-    console.error(e);
-    document.getElementById("tablaReservas").innerHTML = "<p>Error al cargar reservas.</p>";
-  }
-}
+    async function eliminarTurno(fecha,hora,profId,dni){
+      if(!confirm("Desea eliminar este turno?")) return;
+      try{
+        const res=await fetch(API_URL,{
+          method:"POST",
+          body:new URLSearchParams({action:"deleteReserva",username,fecha,hora,profesionalId:profId,dni})
+        });
+        const result=await res.json();
+        if(result.status==="ok"){ 
+          alert("Turno eliminado");
+          await cargarTurnosUsuario();
+          renderTickets(fecha.split("T")[0]);
+        }
+        else alert("Error al eliminar turno: "+(result.msg||""));
+      }catch(e){ console.error(e); }
+    }
 
-function renderTabla(turnos){
-  const cont = document.getElementById("tablaReservas");
-
-  if(turnos.length === 0){
-    cont.innerHTML = "<p>No hay reservas para mostrar.</p>";
-    return;
-  }
-
-  let html = "<table><tr>";
-  // Encabezados dinámicos según las claves de los turnos
-  Object.keys(turnos[0]).forEach(key=>{
-    html += `<th>${key}</th>`;
-  });
-  html += "</tr>";
-
-  turnos.forEach(t=>{
-    html += "<tr>";
-    Object.values(t).forEach(val=>{
-      html += `<td>${val}</td>`;
-    });
-    html += "</tr>";
-  });
-
-  html += "</table>";
-  cont.innerHTML = html;
-}
-
-document.addEventListener("DOMContentLoaded", cargarReservas);
-</script>
+    document.addEventListener("DOMContentLoaded", cargarTurnosUsuario);
+  </script>
 
 </body>
 </html>
