--- a/register.html
+++ b/register.html
@@ -116,6 +116,14 @@
       let username = document.getElementById("username").value.trim().toLowerCase(); // ⬅ siempre minúsculas
       const password = document.getElementById("password").value.trim();
       const msg = document.getElementById("msg");
+// ------------------ VALIDAR CONTRASEÑA ------------------
+  const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).+$/;
+  if(!regex.test(password)){
+    msg.style.color = "white";
+    msg.textContent = "❌ La contraseña debe tener al menos una mayúscula, una minúscula y un número.";
+    return; // no seguimos con el fetch
+  }
+  
       msg.textContent = "Procesando...";
 
       try {
@@ -132,15 +140,15 @@
         const data = await res.json();
 
         if (data.status === "ok") {
-          msg.style.color = "green";
+          msg.style.color = "white";
           msg.textContent = `✅ Usuario creado con éxito. Tu página será /${data.username.toLowerCase()}`; // ⬅ también en minúscula
         } else {
-          msg.style.color = "red";
+          msg.style.color = "white";
           msg.textContent = `❌ ${data.msg}`;
         }
       } catch (err) {
         console.error(err);
-        msg.style.color = "red";
+        msg.style.color = "white";
         msg.textContent = "⚠️ Error de conexión con el servidor.";
       }
     });
