--- a/register.html
+++ b/register.html
@@ -141,7 +141,7 @@
 
         if (data.status === "ok") {
           msg.style.color = "white";
-          msg.textContent = `✅ Usuario creado con éxito. Tu página será /${data.username.toLowerCase()}`; // ⬅ también en minúscula
+          msg.textContent = `✅ Cuenta creada con éxito. Tu página será wwww.turnox.pro/${data.username.toLowerCase()}`; // ⬅ también en minúscula
         } else {
           msg.style.color = "white";
           msg.textContent = `❌ ${data.msg}`;
