--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   font-weight: 700;
   font-style: bold;
       margin-bottom: 5px;
+      letter-spacing: -1px; /* valor negativo junta más las letras */
     }
 
     .subtitle {
