--- a/index.html
+++ b/index.html
@@ -53,15 +53,37 @@
       color: #fff;
     }
 
-    .logo {
-      font-size: 2.5rem;
+    
+.logo {
+  font-size: 2.5rem;
       font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: bold;
       margin-bottom: -2px;
       letter-spacing: -1px; /* valor negativo junta más las letras */
-    }
+  position: relative;
+  display: inline-block;
+  background: linear-gradient(
+    90deg,
+    #fff,
+    #ffd700,
+    #fff
+  );
+  background-size: 200% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 3s linear infinite;
+}
+
+@keyframes shine {
+  from {
+    background-position: 200% center;
+  }
+  to {
+    background-position: -200% center;
+  }
+}
 
     .subtitle {
       font-size: 0.9rem;
