--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
   background: linear-gradient(
     90deg,
     #fff,
-    #DEE9F7;
+    #DEE9F7,
     #fff
   );
   background-size: 200% auto;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shine 7s linear infinite;
+  animation: shine 3s linear infinite;
 }
 
 @keyframes shine {
@@ -84,7 +84,6 @@
     background-position: -200% center;
   }
 }
-
     .subtitle {
       font-size: 0.9rem;
       font-weight: 400;
