--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
   background: linear-gradient(
     90deg,
     #fff,
-    #DEE9F7,
+    #EDEEA2,
     #fff
   );
   background-size: 200% auto;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shine 3s linear infinite;
+  animation: shine 6s linear infinite;
 }
 
 @keyframes shine {
