--- a/index.html
+++ b/index.html
@@ -69,20 +69,19 @@
     #C7B4FA,
   #C7B4FA,
     #D9D9D9,
-    #D9D9D9,
-    #D9D9D9,
+    #fff,
+    #fff,
     #fff,
     #D9D9D9,
     #D9D9D9,
     #C7B4FA,
     #C7B4FA,
-  #C7B4FA,
     #D9D9D9
   );
   background-size: 200% auto;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: shine 3s linear infinite;
+  animation: shine 5s linear infinite;
 }
 
 @keyframes shine {
