--- a/index.html
+++ b/index.html
@@ -120,7 +120,16 @@
       background-color: #f2f2f2;
       transform: translateY(-2px);
     }
-
+.dynamic-text {
+    margin-top: 20px;
+    height: 33%; /* ocupa 1/3 de la pantalla */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    transition: color 1s ease; /* transición suave del color del texto */
   </style>
 </head>
 <body>
@@ -131,5 +140,31 @@
     <a href="/register" class="btn">Crear Cuenta</a>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
   </div>
+
+  <script>
+  const textElement = document.getElementById("dynamicText");
+
+  const states = [
+    { text: "PRE-PAGO", bg: "#533482", color: "white" },
+    { text: "INFINITO", bg: "#C1C7CC", color: "#2A3B54" },
+    { text: "GOLD", bg: "#FFD700", color: "#533482" }
+  ];
+
+  let index = 0;
+
+  function changeState() {
+    const state = states[index];
+    document.body.style.backgroundColor = state.bg;
+    textElement.textContent = state.text;
+    textElement.style.color = state.color;
+
+    index = (index + 1) % states.length; // ciclo infinito
+  }
+
+  // inicial
+  changeState();
+  // cada 3 segundos
+  setInterval(changeState, 3000);
+</script>
 </body>
 </html>
