--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
     <a href="/register" class="btn">Crear Cuenta</a>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
+    <div id="dynamicText" class="dynamic-text">PRE-PAGO</div>
   </div>
 
   <script>
