--- a/index.html
+++ b/index.html
@@ -68,22 +68,23 @@
   position: relative;
   display: inline-block;
   }
-  /* efecto brillo */
   .logo::before {
-    content: "";
+    content: "TurnoX"; /* se repite el texto */
     position: absolute;
     top: 0;
-    left: -100%;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(120deg, transparent, rgba(255,255,255,0.6), transparent);
-    animation: shine 3s infinite;
+    background: linear-gradient(120deg, transparent, rgba(255,255,255,0.8), transparent);
+    background-size: 200% 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 3s infinite linear;
   }
 
   @keyframes shine {
-    0% { left: -100%; }
-    50% { left: 100%; }
-    100% { left: 100%; }
+    0% { background-position: -200% 0; }
+    100% { background-position: 200% 0; }
   }
 
     .subtitle {
