--- a/index.html
+++ b/index.html
@@ -67,15 +67,21 @@
       letter-spacing: -1px; /* valor negativo junta más las letras */
   position: relative;
   display: inline-block;
+  color: transparent;
   }
   .logo::before {
-    content: "TurnoX"; /* se repite el texto */
+    content: "TurnoX";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(120deg, transparent, rgba(255,255,255,0.8), transparent);
+    background: linear-gradient(
+      120deg,
+      transparent,
+      rgba(255,255,255,0.9),
+      transparent
+    );
     background-size: 200% 100%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -83,9 +89,10 @@
   }
 
   @keyframes shine {
-    0% { background-position: -200% 0; }
+    0%   { background-position: -200% 0; }
     100% { background-position: 200% 0; }
   }
+
 
     .subtitle {
       font-size: 0.9rem;
