--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
     <a href="/register" class="btn">Crear Cuenta</a>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
+     <a href="/demo" class="btn">Ver Demo</a>
     
   </div>
 
