--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
       background-color: #f2f2f2;
       transform: translateY(-2px);
     }
-
+.nota {
+  margin-top: 0.5rem;
+  font-size: 0.9rem;
+  color: #533482;
+  font-weight: 500;
+}
   </style>
 </head>
 <body>
@@ -132,6 +137,7 @@
     <div class="subtitle">www.turnox.pro</div>
 
     <a href="/register" class="btn">Crear Cuenta</a>
+    <div class="nota">Gratis | Sin Tarjeta</div>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
      <a href="/demo" class="btn">Ver Demo</a>
     
