--- a/index.html
+++ b/index.html
@@ -123,11 +123,12 @@
       background-color: #f2f2f2;
       transform: translateY(-2px);
     }
-.nota {
-  margin-top: 0.5rem;
-  font-size: 0.9rem;
-  color: #533482;
-  font-weight: 500;
+.btn .sub {
+  display: block;
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: #CDCDCD; 
+  margin-top: 0.2rem;
 }
   </style>
 </head>
@@ -136,8 +137,10 @@
     <div class="logo">TurnoX</div>
     <div class="subtitle">www.turnox.pro</div>
 
-    <a href="/register" class="btn">Crear Cuenta</a>
-    <div class="nota">Gratis | Sin Tarjeta</div>
+    <a href="/register" class="btn">
+  Crear Cuenta
+  <span class="sub">Gratis | Sin Tarjeta</span>
+</a>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
      <a href="/demo" class="btn">Ver Demo</a>
     
