--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
     }
 .btn .sub {
   display: block;
-  font-size: 0.8rem;
+  font-size:8px;
   font-weight: 400;
   color: #CDCDCD; 
-  margin-top: 0.2rem;
+  margin-top:1px;
 }
   </style>
 </head>
