--- a/login.html
+++ b/login.html
@@ -1,44 +1,107 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <title>TurnoX - Sistema PRE-PAGO de Turnos On Line</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+  <!-- Fuentes -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+
+  <!-- Iconos -->
+  <link rel="icon" type="image/png" href="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Open Graph para WhatsApp/Facebook -->
+  <meta property="og:title" content=">TurnoX - Sistema PRE-PAGO de Turnos On Line" />
+  <meta property="og:description" content="Turnero Pro." />
+  <meta property="og:image" content="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://turnox.pro/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TurnoX - Sistema PRE-PAGO de Turnos On Line" />
+  <meta name="twitter:description" content="Turnero Pro." />
+  <meta name="twitter:image" content="https://i.ibb.co/p6Ycq6XC/Turnox-logo.png" />
   <style>
-    /* ======== Reset ======== */
+    /* Reset y estilos generales */
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
     }
 
-    body {
-      background-color: #533482; /* violeta */
-      height: 100vh;
+    html, body {
+      height: 100%;
+      font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+      background-color: #533482;
       display: flex;
       justify-content: center;
       align-items: center;
+       margin: 0;
+      min-height: 100vh; /* ocupa toda la pantalla */
+    transition: background-color 1s ease-in-out; /* transición suave del fondo */
+    }
+
+    .logo {
+  font-size: 3rem;
+      font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: bold;
+      margin-bottom: -2px;
+      letter-spacing: -2px; /* valor negativo junta más las letras */
+  position: relative;
+  display: inline-block;
+  color: transparent;
+  }
+  .logo::before {
+    content: "TurnoX";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      120deg,
+      transparent,
+      rgba(255,255,255,0.9),
+      transparent
+    );
+    background-size: 200% 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 5s infinite linear;
+  }
+
+@keyframes shine {
+  0%   { background-position: 200% 0; }   /* 👉 arranca a la derecha */
+  100% { background-position: -200% 0; }  /* 👉 termina a la izquierda */
+}
+
+
+
+    .subtitle {
+      font-size: 0.9rem;
+      font-weight: 400;
+      margin-bottom: 40px;
+      color: #ffffffcc;
     }
 
     .login-container {
       text-align: center;
-      color: white;
-      width: 100%;
-      max-width: 320px;
+      color: #fff;
     }
 
-    .login-container h1 {
-      font-size: 32px;
-      font-weight: 700;
-    }
-
-    .login-container p {
-      font-size: 12px;
-      margin-bottom: 40px;
-    }
-
+    
     .login-container label {
       display: block;
       margin-bottom: 8px;
@@ -56,20 +119,24 @@
     }
 
     .login-container button {
-      width: 100%;
-      padding: 12px;
-      background: white;
+      display: block;
+      width: 250px;
+      padding: 15px 0;
+      margin: 10px auto;
+      font-size: 1rem;
+      font-weight: 600;
       color: #533482;
+      background-color: #fff;
       border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      font-weight: bold;
+      border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
+      text-decoration: none;
+      transition: background-color 0.3s, transform 0.2s;
     }
 
     .login-container button:hover {
-      background: #ddd;
+      background-color: #f2f2f2;
+      transform: translateY(-2px);
     }
 
     .recuperar {
@@ -101,15 +168,30 @@
     }
 
     #recuperarDiv button {
-      background: white;
+      display: block;
+      width: 250px;
+      padding: 15px 0;
+      margin: 10px auto;
+      font-size: 1rem;
+      font-weight: 600;
       color: #533482;
+      background-color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.3s, transform 0.2s;
+    }
+  #recuperarDiv button:hover {
+      background-color: #f2f2f2;
+      transform: translateY(-2px);
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h1>TurnoX</h1>
-    <p>www.turnox.pro</p>
+    <div class="logo">TurnoX</div>
+    <div class="subtitle">www.turnox.pro</div>
 
     <label for="email">Ingresa a tu cuenta:</label>
     <input type="email" id="email" placeholder="Email">
