--- a/login.html
+++ b/login.html
@@ -186,20 +186,28 @@
       background-color: #f2f2f2;
       transform: translateY(-2px);
     }
-    #toast {
+  #toast {
   display: none;
   position: fixed;
-  top: 20px;
-  right: 20px;
-  background: #4CAF50; /* verde por defecto para éxito */
-  color: white;
-  padding: 15px 25px;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(83, 52, 130, 0.85); /* violeta semitransparente tipo esmerilado */
+  backdrop-filter: blur(5px); /* efecto esmerilado */
+  color: white; /* texto blanco */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem; /* tamaño del texto */
   font-weight: 600;
   z-index: 1000;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
   transition: opacity 0.3s;
 }
+
 
   </style>
 </head>
@@ -278,20 +286,18 @@ async function recuperarClave(){
   showToast(data.msg || "No encontramos tu email.", "#f44336"); // rojo error
 }
   }
-function showToast(message, color = "#4CAF50") {
+function showToast(message) {
   const toast = document.getElementById("toast");
   toast.innerText = message;
-  toast.style.background = color;
-  toast.style.display = "block";
+  toast.style.display = "flex";
   toast.style.opacity = "1";
 
-  // Desaparece después de 3 segundos
   setTimeout(() => {
     toast.style.opacity = "0";
     setTimeout(() => {
       toast.style.display = "none";
-    }, 300); // espera a que termine la transición
-  }, 3000);
+    }, 300);
+  }, 3000); // desaparece después de 3 segundos
 }
 
   </script>
