--- a/login.html
+++ b/login.html
@@ -209,6 +209,21 @@
   transition: opacity 0.3s;
 }
 
+.spinner {
+  display: none;          /* empieza oculto */
+  margin: 10px auto;
+  width: 30px;
+  height: 30px;
+  border: 4px solid #fff;       /* color del borde */
+  border-top: 4px solid #533482; /* color del giro */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
   </style>
