--- a/login.html
+++ b/login.html
@@ -324,10 +324,14 @@ document.getElementById("spinnerRecuperar").style.display = "block"; // antes de
   showToast("Te enviamos tu contraseña al correo ingresado."); 
 } else {
   showToast(data.msg || "No encontramos tu email."); 
-} finally {
-    spinner.style.display = "none";
+} 
+  } catch (error) {
+    showToast("Ocurrió un error de conexión");
+    console.error(error);
+  } finally {
+    spinner.style.display = "none"; // ✅ ocultamos spinner siempre
   }
-  }
+}
     
 
 
