--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <a href="/register" class="btn">
   Crear Cuenta
-  <span class="sub">Gratis | Sin Tarjeta</span>
+  <span class="sub"></span>
 </a>
     <a href="/login" class="btn">Ya tengo una cuenta</a>
      <a href="/demo" class="btn">Ver Demo</a>
